# iOpt

./: .gitignore  .readthedocs.yml  Dockerfile  LICENSE  README.md  README_ru.md  listener.py  method.py  optim_task.py  problem.py  process.py  requirements.txt  search_data.py  setup.cfg  setup.py  sol_value.py  solution.py  solver.py  system_architecture_design.py
benchmarks/: README.md  argparser.py  experiment.py  hyperparams.py  metrics.py  requirements.txt  runner.py
compare/: methods.py  notebook.ipynb
dashboard/: static_dashboard.py
docs/: requirements.txt
examples/: GKLS_async_example.py  GKLS_example.py  GKLS_timeout_example.py  Grishagin_example.py  Hill_example.py  MCO_Grishagin_example.py  MCO_Test1_example.py  MCO_breast_cancer_example.py  MCO_example.py  README.md  RastriginInt_example.py  Rastrigin_example.py  Shekel4_example.py  Shekel_example.py  StronginC3_example.py  Stronginc3_example.py  dash_example.py  grid_search_example.py  iOpt_example.ipynb  jahs_bench2_example.py  jahs_bench_example.py  mco_example.py  mco_task.py
iOpt/: problem.py  solution.py  solver.py  solver_parametrs.py  trial.py
problems/: Floudas.py  GKLS.py  Pern.py  Synthes.py  Yuan.py  ex1222.py  g2c.py  g8c.py  gbd.py  grishagin.py  grishagin_mco.py  hill.py  jahs_bench_task.py  mco_breast_cancer.py  mco_test1.py  mco_test1_1.py  mco_test3.py  mco_test5.py  mco_test6.py  mco_test7.py  mopta_y_data.csv  nvs21.py  p1.py  p2.py  p7.py  rastrigin.py  rastriginInt.py  rastrigin_hidden_constraint.py  rastrigin_int_hidden_constraint.py  romeijn1c.py  romeijn2c.py  romeijn3c.py  romeijn5c.py  shekel.py  shekel4.py  stronginC5.py  stronginc2.py  stronginc3.py  stronginc5.py  xsquared.py
test/: test_GKLS.py  test_evolvent.py  test_optim_task.py  (+7 more)
(+254 files in other folders)
