[metadata]
name = iOpt
version = 1.0.0

[options]
python_requires = >= 3.8
install_requires =
    depq
    scikit-opt

[options.extras_require]
test =
    mypy >=0.971
    flake8 >=4.0.0,<5.0.0
    isort >=5.10.0,<6.0.0

[flake8]
max_line_length = 120
exclude = test_*.py

[mypy]
ignore_missing_imports = True
no_incremental = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_subclassing_any = False
disallow_any_generics = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unreachable = True
allow_untyped_decorators = True

[isort]
line_length=120
combine_as_imports = true
default_section = THIRDPARTY
known_first_party=iOpt,test
profile = black
